src/styles/global.css
/* ... */
@layer typography {
  .section-title,
  .site-logo,
  .package-title,
  .card__content-title,
  .subtitle,
  .timeline__step-title {
    text-transform: uppercase;
  }

  /* MQ */
  .hero-title {
    font-size: clamp(4rem, 3.2077464788732395rem + 3.3802816901408446vw, 6.25rem);
    font-weight: var(--fw-700);
    line-height: 1;
    letter-spacing: -0.05em;
  }

  .hero-title-accent {
    color: var(--clr-body-muted);
  }

  .hero-title--inner {
    font-size: clamp(5.625rem, 3.644366197183099rem + 8.450704225352112vw, 11.25rem);
    letter-spacing: -0.02em;
  }

  .hero-title--404 {
    font-size: clamp(2.5rem, 1.3996478873239437rem + 4.694835680751173vw, 5.625rem);
    letter-spacing: -1.75px;
  }

  .hero__subtitle {
    color: var(--clr-body-muted-light);
    font-size: clamp(0.9375rem, 0.9rem + 0.16vw, 1rem);
    font-weight: var(--fw-700);
  }

  .hero__subtitle--404 {
    color: var(--clr-body-muted-light);
    font-size: clamp(0.9375rem, 0.8778625954198473rem + 0.2544529262086514vw, 1rem);
    max-width: 45ch;
    margin-inline: auto;
  }

  /* MQ */
  .site-logo {
    color: var(--clr-primary-gold);
    font-size: var(--fs-700);
    font-weight: var(--fw-700);
    letter-spacing: -0.06em;
  }

  .section-title {
    color: var(--clr-primary-gold);
    text-transform: uppercase;
    font-size: clamp(1rem, 0.8807251908396947rem + 0.5089058524173028vw, 1.125rem);
    letter-spacing: 2px;
  }

  .section-subtitle {
    font-size: clamp(2.125rem, 1.5528169014084507rem + 2.4413145539906105vw, 3.75rem);
    font-weight: var(--fw-700);
    line-height: 1;
    letter-spacing: -0.03em;

    margin-block-start: var(--spacing-xs);
  }

  .section-subtitle--light {
    color: var(--clr-body-text);
  }
  .section-subtitle--dark {
    color: var(--clr-body-text-dark);
  }

  .offer-card-title {
    font-size: clamp(1rem, 0.925rem + 0.32vw, 1.125rem);
  }

  .timeline__step-title {
    font-size: var(--fs-400);
    letter-spacing: 1px;
  }

  /* Redesign Start */

  .eyebrow {
    position: relative;
    display: inline-flex;
    align-items: center;
    gap: var(--spacing-xs);
    font-size: var(--fs-350);
    font-weight: var(--fw-700);
    letter-spacing: 0.22em;
    text-transform: uppercase;
  }

  .eyebrow::before {
    content: "";
    width: 4px;
    height: 4px;
    border-radius: 50%;
    background-color: var(--eyebrow-clr);
  }

  .eyebrow--gold {
    --eyebrow-clr: var(--clr-primary-gold);
    color: var(--eyebrow-clr);
  }

  .eyebrow--dark {
    --eyebrow-clr: var(--clr-body-muted);
    color: var(--eyebrow-clr);
  }

  .footer-title {
    max-width: 18ch;
    color: var(--clr-neutral-0);
    font-size: clamp(1.75rem, 1rem + 3.5vw, 3.5rem);
    font-weight: var(--fw-700);
    line-height: 1;
    letter-spacing: -0.01em;
  }
}

@layer components {
}

@layer utility {
  .skip-to-main {
    position: absolute;
    top: -80px;
    left: 0;
    background: #000;
    color: #fff;
    padding: 8px 16px;
    z-index: 100;
    text-decoration: none;
    font-weight: bold;
    transition: top 0.3s;
  }

  .skip-to-main:focus {
    top: 0; /* slide into view when focused */
  }

  .sr-only {
    position: absolute;
    width: 1px;
    height: 1px;
    padding: 0;
    margin: -1px;
    overflow: hidden;
    clip: rect(0 0 0 0);
    white-space: nowrap;
    border: 0;
  }

  .hidden {
    display: none;
  }

  /* .fade-in {
    opacity: 0;
    scale: 0.99;
    transition:
      opacity 900ms,
      scale 900ms;
    transition-timing-function: cubic-bezier(0.66, 0, 0.34, 1);
  }

  .fade-in.is-visible {
    opacity: 1;
    scale: 1;
  } */

  /* @media (max-width: 480px) {
    .fade-in {
      transform: translateY(15px);
    }
  } */
}

/* 

To Do List 
- Add classes to Header.astro component
- Research if there's any copyright/privacy shit with social logos
- Fix SVG social logos
- Glitch text on h1
- prefers reduced media query for animations/transitions
- fix font-sizes (not clamped)
- accessibility check
- fix hover effect on OurOffer cards - not performant - maybe on PricingCards too
- Refactor footer code
- setup database/form handler
- Make the entire contact details a link (contact section)


Design Ideas?
-  clip-path on the buttons to match cyberpunk feel


 Design Q for Mona
 - fs on site-logo 
 
 */

